--- a/FreeAIr/UI/ToolWindows/TaskListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/TaskListToolWindowControl.xaml
@@ -9,12 +9,15 @@
     xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
     xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
     xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
+    xmlns:mdxaml="https://github.com/whistyun/MdXaml"
+    xmlns:plugins="clr-namespace:MdXaml.Plugins;assembly=MdXaml.Plugins"
     toolkit:Themes.UseVsTheme="True"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="300"
     Name="TaskListToolWindow"
     >
+
     <Grid
         Margin="2"
         >
@@ -44,6 +47,7 @@
                 Grid.Column="0"
                 Margin="2"
                 Content="Open as MD content..."
+                x:Name="OpenAsMdButton"
                 Command="{Binding OpenAsMdCommand}"
                 />
             <Button
@@ -105,19 +109,183 @@
             HorizontalAlignment="Center"
             />
 
-        <TextBox
+        <mdxaml:MarkdownScrollViewer 
             Grid.Row="1"
             Grid.Column="2"
             Margin="2"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
-            IsReadOnly="True"
-            IsReadOnlyCaretVisible="True"
             HorizontalScrollBarVisibility="Auto"
             VerticalScrollBarVisibility="Auto"
-            TextWrapping="NoWrap"
-            Text="{Binding Path=SelectedTaskResponse, Mode=OneWay}"
-            />
+            Markdown="{Binding Path=SelectedTaskResponse, Mode=OneWay}"
+            >
+            <mdxaml:MarkdownScrollViewer.MarkdownStyle>
+                <Style TargetType="FlowDocument">
+                    <Setter Property="FontFamily"	 Value="Calibri" />
+                    <Setter Property="TextAlignment" Value="Left" />
+                    <Setter Property="PagePadding"   Value="0"/>
+
+                    <Style.Resources>
+                        <Style TargetType="Section">
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="Blockquote">
+                                    <Setter Property="Padding"         Value="10, 5"/>
+                                    <Setter Property="BorderBrush"     Value="#DEDEDE"/>
+                                    <Setter Property="BorderThickness" Value="5,0,0,0"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <!-- here is a style for ```block``` -->
+                        <Style TargetType="avalonEdit:TextEditor" xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit">
+                            <Setter Property="Foreground"      Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}"/>
+                            <Setter Property="Background"      Value="Transparent"/>
+                            <Setter Property="BorderBrush"     Value="#DEDEDE"/>
+                            <Setter Property="BorderThickness" Value="0,1,0,1"/>
+                            <Setter Property="FontFamily"      Value="Cascadia Code"/>
+                            <Setter Property="FontSize"        Value="14"/>
+
+                            <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+                            <Setter Property="VerticalScrollBarVisibility"   Value="Auto"/>
+                            <Setter Property="Padding"                       Value="5,0,5,0"/>
+                        </Style>
+
+                        <Style TargetType="Paragraph">
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="Heading1">
+                                    <Setter Property="FontSize"    Value="42" />
+                                    <Setter Property="Foreground"  Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="FontWeight"  Value="Light" />
+                                </Trigger>
+
+                                <Trigger Property="Tag" Value="Heading2">
+                                    <Setter Property="FontSize"    Value="20" />
+                                    <Setter Property="Foreground"  Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="FontWeight"  Value="Light" />
+                                </Trigger>
+
+                                <Trigger Property="Tag" Value="Heading3">
+                                    <Setter Property="FontSize"    Value="20" />
+                                    <Setter Property="Foreground"  Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="FontWeight"  Value="Light" />
+                                </Trigger>
+
+                                <Trigger Property="Tag" Value="Heading4">
+                                    <Setter Property="FontSize"    Value="14" />
+                                    <Setter Property="Foreground"  Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="FontWeight"  Value="Light" />
+                                </Trigger>
+
+                                <Trigger Property="Tag" Value="CodeBlock">
+                                    <Setter Property="FontFamily"      Value="Cascadia Code"/>
+                                    <Setter Property="FontSize"        Value="14"/>
+                                    <Setter Property="Foreground"  Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="Background"      Value="Transparent"/>
+                                    <Setter Property="BorderBrush"     Value="#DEDEDE"/>
+                                    <Setter Property="BorderThickness" Value="0,5,0,5"/>
+                                    <Setter Property="Margin"          Value="5,0,5,0"/>
+                                </Trigger>
+
+                                <Trigger Property="Tag" Value="Note">
+                                    <Setter Property="Margin"          Value="5,0,5,0"/>
+                                    <Setter Property="Padding"         Value="10, 5"/>
+                                    <Setter Property="BorderBrush"     Value="#DEDEDE"/>
+                                    <Setter Property="BorderThickness" Value="3,3,3,3"/>
+                                    <Setter Property="Background"      Value="Transparent"/>
+                                </Trigger>
+
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style TargetType="Run">
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="CodeSpan">
+                                    <Setter Property="FontFamily" Value="Cascadia Code"/>
+                                    <Setter Property="FontSize"   Value="14"/>
+                                    <Setter Property="Foreground" Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="Background" Value="Transparent"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                        <Style TargetType="Span">
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="CodeSpan">
+                                    <Setter Property="FontFamily" Value="Cascadia Code"/>
+                                    <Setter Property="FontSize"   Value="14"/>
+                                    <Setter Property="Foreground" Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                    <Setter Property="Background" Value="Transparent"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style TargetType="Hyperlink">
+                            <Setter Property="TextDecorations" Value="None" />
+                        </Style>
+
+                        <Style TargetType="Image">
+                            <Setter Property="RenderOptions.BitmapScalingMode"
+                                Value="NearestNeighbor" />
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="imageright">
+                                    <Setter Property="Margin"  Value="20,0,0,0" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <!--
+                        The Table's style don't seem to support border-collapse.
+                        By making the ruled line width 0.5 and applying it to cell and table,
+                        it looks like the ruled lines are not doubled.
+                        -->
+                        <Style TargetType="Table">
+                            <Setter Property="CellSpacing" Value="0"/>
+                            <Setter Property="BorderThickness" Value="0.5"/>
+                            <Setter Property="BorderBrush" Value="Gray"/>
+                        </Style>
+
+                        <Style TargetType="TableRowGroup">
+                            <Style.Triggers>
+                                <Trigger Property="Tag" Value="TableHeader">
+                                    <Setter Property="FontWeight" Value="DemiBold"/>
+                                    <Setter Property="Background" Value="Transparent"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style TargetType="TableCell">
+                            <Setter Property="BorderThickness" Value="0.5"/>
+                            <Setter Property="BorderBrush" Value="Gray"/>
+                            <Setter Property="Padding" Value="2"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TableRow}}, Path=Tag}" Value="EvenTableRow">
+                                    <Setter Property="Background" Value="Transparent"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style TargetType="BlockUIContainer">
+                            <Style.Triggers>
+                                <Trigger Property="Tag"  Value="RuleSingle">
+                                    <Setter Property="Margin" Value="0,3"/>
+                                </Trigger>
+
+                                <Trigger Property="Tag"  Value="RuleDouble">
+                                    <Setter Property="Margin" Value="0,3"/>
+                                </Trigger>
+
+                                <Trigger Property="Tag"  Value="RuleBold">
+                                    <Setter Property="Margin" Value="0,3"/>
+                                </Trigger>
+
+                                <Trigger Property="Tag"  Value="RuleBoldWithSingle">
+                                    <Setter Property="Margin" Value="0,3"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Style.Resources>
+                </Style>
+            </mdxaml:MarkdownScrollViewer.MarkdownStyle>
+        </mdxaml:MarkdownScrollViewer>
 
     </Grid>
 </UserControl>
