Added composing commit message.

--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -323,6 +323,7 @@
                 IsEnabled="{Binding IsEnabledPrompt, Mode=OneWay}"
                 Text="{Binding PromptText, UpdateSourceTrigger=PropertyChanged}"
                 FontSize="18"
+                AcceptsReturn="True"
                 >
                 <TextBox.InputBindings>
                     <KeyBinding Command="{Binding Path=CreatePromptCommand}" Key="Enter" />
