--- a/FreeAIr/UI/Windows/WaitGitWindow.xaml
+++ b/FreeAIr/UI/Windows/WaitGitWindow.xaml
@@ -14,6 +14,7 @@
     ResizeMode="NoResize"
     Loaded="Window_Loaded"
     Closing="Window_Closing"
+    Keyboard.KeyUp="Window_KeyUp"
     >
     <Grid>
         <Grid.RowDefinitions>
