--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -162,14 +162,67 @@
                             <Style TargetType="avalonEdit:TextEditor" xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit">
                                 <Setter Property="Foreground"      Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}"/>
                                 <Setter Property="Background"      Value="Transparent"/>
-                                <Setter Property="BorderBrush"     Value="#DEDEDE"/>
-                                <Setter Property="BorderThickness" Value="0,1,0,1"/>
                                 <Setter Property="FontFamily"      Value="Cascadia Code"/>
                                 <Setter Property="FontSize"        Value="14"/>
 
                                 <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
                                 <Setter Property="VerticalScrollBarVisibility"   Value="Auto"/>
-                                <Setter Property="Padding"                       Value="5,0,5,0"/>
+                                <Setter Property="Padding"                       Value="5,5,5,5"/>
+
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type avalonEdit:TextEditor}">
+
+                                            <Grid
+                                                Margin="0,5,0,0"
+                                                >
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="auto" />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+
+                                                <StackPanel
+                                                    Grid.Row="0"
+                                                    Orientation="Horizontal"
+                                                    HorizontalAlignment="Right"
+                                                    >
+                                                    <Button
+                                                        HorizontalAlignment="Right"
+                                                        Margin="5,0,5,0"
+                                                        Content="Copy"
+                                                        Style="{Binding ElementName=OpenAsMdButton, Path=Style}"
+                                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.CopyCodeBlockCommand}"
+                                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextArea}"
+                                                        ToolTip="Copy this code part to clipboard"
+                                                        />
+                                                    <Button
+                                                        HorizontalAlignment="Right"
+                                                        Margin="5,0,5,0"
+                                                        Content="Replace selected text"
+                                                        Style="{Binding ElementName=OpenAsMdButton, Path=Style}"
+                                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.ReplaceSelectedTextCommand}"
+                                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextArea}"
+                                                        ToolTip="Replace the selected block of the code in the VS document with this code part"
+                                                        />
+
+                                                </StackPanel>
+
+                                                <ScrollViewer
+                                                    Grid.Row="1"
+                                                    Focusable="False"
+                                                    Name="PART_ScrollViewer"
+                                                    CanContentScroll="True"
+                                                    VerticalScrollBarVisibility="{TemplateBinding VerticalScrollBarVisibility}"
+                                                    HorizontalScrollBarVisibility="{TemplateBinding HorizontalScrollBarVisibility}"
+                                                    Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextArea}"
+                                                    VerticalContentAlignment="Top"
+                                                    HorizontalContentAlignment="Left"
+                                                    Padding="{TemplateBinding Padding}"
+                                                    />
+                                            </Grid>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
                             </Style>
 
                             <Style TargetType="Paragraph">
