--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -201,7 +201,7 @@
                                                     >
                                                     <Button
                                                         HorizontalAlignment="Right"
-                                                        Margin="5,0,5,0"
+                                                        Margin="2,0,2,0"
                                                         Content="↑ Copy"
                                                         Style="{Binding ElementName=OpenAsMdButton, Path=Style}"
                                                         Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.CopyCodeBlockCommand}"
@@ -210,12 +210,21 @@
                                                         />
                                                     <Button
                                                         HorizontalAlignment="Right"
-                                                        Margin="5,0,5,0"
+                                                        Margin="2,0,2,0"
                                                         Content="↑ Replace original text"
                                                         Style="{Binding ElementName=OpenAsMdButton, Path=Style}"
                                                         Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.ReplaceSelectedTextCommand}"
                                                         CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextArea}"
                                                         ToolTip="Replace the selected block of the code in the VS document with this code part"
+                                                        />
+                                                    <Button
+                                                        HorizontalAlignment="Right"
+                                                        Margin="2,0,2,0"
+                                                        Content="↑ Create new file..."
+                                                        Style="{Binding ElementName=OpenAsMdButton, Path=Style}"
+                                                        Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.CreateNewFileCommand}"
+                                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TextArea}"
+                                                        ToolTip="Create new file with this code part"
                                                         />
 
                                                 </StackPanel>
@@ -273,12 +282,13 @@
                                 </Style.Triggers>
                             </Style>
 
+                            <!-- here is a style for `block` -->
                             <Style TargetType="Run">
                                 <Style.Triggers>
                                     <Trigger Property="Tag" Value="CodeSpan">
                                         <Setter Property="FontFamily" Value="Cascadia Code"/>
                                         <Setter Property="FontSize"   Value="14"/>
-                                        <Setter Property="Foreground" Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                        <Setter Property="Foreground" Value="#569CD6"/>
                                         <Setter Property="Background" Value="Transparent"/>
                                     </Trigger>
                                 </Style.Triggers>
@@ -288,7 +298,7 @@
                                     <Trigger Property="Tag" Value="CodeSpan">
                                         <Setter Property="FontFamily" Value="Cascadia Code"/>
                                         <Setter Property="FontSize"   Value="14"/>
-                                        <Setter Property="Foreground" Value="{Binding ElementName=OpenAsMdButton, Path=Foreground}" />
+                                        <Setter Property="Foreground" Value="#569CD6"/>
                                         <Setter Property="Background" Value="Transparent"/>
                                     </Trigger>
                                 </Style.Triggers>
@@ -383,6 +393,13 @@
                     <KeyBinding Command="{Binding Path=CreatePromptCommand}" Key="Enter" />
                 </TextBox.InputBindings>
             </TextBox>
+
+            <Label
+                Grid.Row="2"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Right"
+                Content="Enter - send prompt. Shift+Enter: new line."
+                />
 
         </Grid>
 
